force-app/main/default/objects/redwing__Response__c/redwing__Response__c.object-meta.xml
<CustomObject>
    <label>Response</label>
    <nameField>
        <displayFormat>RES-{0000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>