force-app/main/default/objects/redwing__Response__c/fields/redwing__Correct_Response__c.field-meta.xml
<CustomField>
    <fullName>redwing__Correct_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Correct Response</label>
    <type>Checkbox</type>
</CustomField>