force-app/main/default/objects/redwing__Response__c/fields/redwing__Number_Response__c.field-meta.xml
<CustomField>
    <fullName>redwing__Number_Response__c</fullName>
    <label>Number Response</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>