force-app/main/default/objects/redwing__Response__c/fields/redwing__Question__c.field-meta.xml
<CustomField>
    <fullName>redwing__Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question</label>
    <referenceTo>redwing__Question__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>