force-app/main/default/objects/redwing__Response__c/fields/redwing__Question_Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Question_Type__c</fullName>
    <formula>IF(redwing__Question__c != NULL, TEXT(redwing__Question__r.redwing__Type__c), TEXT(redwing__Survey_Question__r.redwing__Type__c))</formula>
    <label>Question Type</label>
    <type>Text</type>
</CustomField>