force-app/main/default/objects/redwing__Response__c/fields/redwing__Response_Answer_Sequence__c.field-meta.xml
<CustomField>
    <fullName>redwing__Response_Answer_Sequence__c</fullName>
    <label>Response Answer Sequence</label>
    <type>TextArea</type>
</CustomField>