force-app/main/default/objects/redwing__Response__c/fields/redwing__Response_Text__c.field-meta.xml
<CustomField>
    <fullName>redwing__Response_Text__c</fullName>
    <label>Response Text</label>
    <type>TextArea</type>
</CustomField>