force-app/main/default/objects/redwing__Response__c/fields/redwing__Response_Text_Long__c.field-meta.xml
<CustomField>
    <fullName>redwing__Response_Text_Long__c</fullName>
    <label>Response Text Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>