force-app/main/default/objects/redwing__Response__c/fields/redwing__Survey_Question__c.field-meta.xml
<CustomField>
    <fullName>redwing__Survey_Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Survey Question</label>
    <referenceTo>redwing__Survey_Question__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>