force-app/main/default/objects/redwing__Response__c/listViews/redwing__All.listView-meta.xml
<ListView>
    <fullName>redwing__All</fullName>
    <columns>NAME</columns>
    <columns>redwing__User__c</columns>
    <columns>redwing__Learning_Assignment__c</columns>
    <columns>redwing__Question__c</columns>
    <columns>redwing__Question_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>